--- a/up_tck_java/java_test_agent/pom.xml
+++ b/up_tck_java/java_test_agent/pom.xml
@@ -14,6 +14,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+		<dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.25.0</version>
+        </dependency>
         <dependency>
             <groupId>io.cloudevents</groupId>
             <artifactId>cloudevents-api</artifactId>
@@ -24,11 +29,13 @@
             <artifactId>up-java</artifactId>
             <version>1.5.7</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.eclipse.uprotocol</groupId>
             <artifactId>uprotocol-core-api</artifactId>
             <version>1.5.5</version>
         </dependency>
+        -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
